--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ GUI_2_Esp_App_setup_v1.0.exe
 GUI_2_Esp_App_setup_v2.0.exe
 GUI_2_Esp_App_setup_v3.0.exe
 GUI_2_Esp_App_setup_v4.0.exe
-Controller_readings_setup_app.exe
+Controller_readings_setup_v1.0.exe
 temp.py
+Old_PS4.py
